# ennbo

./: .gitattributes  .gitignore  .kissconfig  .pre-commit-config.yaml  Makefile  README.md  RNG_CONTRACT.md  compare_ennbo_versions_report.json  pixi.toml  plan.md  pyproject.toml  requirements.txt
.cargo/: config.toml
.malvin/: checks~
admin/: conda.yml  find_forgotten_py.sh
docs/: algos.tex
examples/: demo_enn.ipynb  demo_morbo_enn.ipynb  demo_turbo_enn.ipynb  try_hnsw_disk.py
ops/: stress.py  tune_bpann.py
papers/: bpann_2511.15557v1.tex
reports/report_001/: report_001.tex
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/bpann/: Cargo.toml
rust/crates/bpann/src/: backend.rs  distance.rs  error.rs  lib.rs  merge.rs  mmap_store.rs  observation.rs
rust/crates/bpann/src/index/: build.rs  kmeans.rs  mod.rs  page.rs  persist_atomic.rs  search.rs  sync.rs
rust/crates/bpann/tests/: kiss_build_static.rs  kiss_coverage.rs  merge.rs  mmap_store.rs  observation.rs  persist_hardening.rs  search.rs
rust/crates/enn-core/: Cargo.toml
rust/crates/enn-core/src/: acquisition.rs  hash.rs  hypervolume.rs  index.rs  lib.rs  model.rs  params.rs  util.rs
rust/crates/enn-py/: Cargo.toml  TESTING.md  build.rs
rust/crates/enn-py/src/: enn_py_build.rs  enn_py_build_api.inc.rs  lib.rs  link_rpath.rs  py_fit.rs  py_fitter.rs  py_hash.rs  py_hypervolume.rs  py_model.rs  py_optimizer.rs  py_util.rs  py_weights.rs  pymodule_wrappers.rs
rust/crates/enn-py/tests/: kiss_repo_coverage.rs  pymodule_wrappers.rs
rust/crates/ennbo/: Cargo.toml  README.md  build.rs
rust/crates/ennbo/cmake/: enn_cmake.sh  faiss_blas_toolchain.cmake  install_patchelf_root.sh
rust/crates/ennbo/examples/: trial_bench.rs
rust/crates/ennbo/src/: acquisition.rs  candidates.rs  config.rs  draw.rs  ennbo_build.rs  ennbo_build_api.inc.rs  error.rs  faiss_bridge.cpp  fit.rs  fitter.rs  hash.rs  hypervolume.rs  incumbent_tracker.rs  index.rs  lib.rs  link_search.rs  model.rs  morbo_trust_region.rs  optimizer_factory.rs  params.rs  posterior.rs  stats.rs  surrogate.rs  test_helpers.rs  trials.rs  trust_region.rs  trust_region_config.rs  util.rs  weights.rs
rust/crates/ennbo/src/backend/: disk_observation.rs  in_memory.rs  mod.rs  row_storage.rs
rust/crates/ennbo/src/disk_bpann/: enn_backend.rs  mod.rs
rust/crates/ennbo/src/disk_hnsw/: access.rs  enn_backend.rs  flush.rs  graph_header.rs  graph_mut.rs  hnsw.rs  mod.rs  node_layout.rs  params.rs  split_graph.rs  store.rs
rust/crates/ennbo/src/knn/: faiss_backend.rs  metal_index.metal  metal_index.rs  mod.rs  opencl_index.cl  opencl_index.rs
rust/crates/ennbo/src/model/: access.rs
rust/crates/ennbo/src/optimizer/: incumbent.rs  mod.rs  obs_access.rs  observation_delta.rs  observation_store.rs  tests.rs  tests_incremental.rs  tests_morbo_incumbent.rs  tests_morbo_noise_aware_incumbent.rs  tr_state.rs
rust/crates/ennbo/src/posterior/: draw_compute.rs  light.rs  neighbor.rs  neighbor_dist.rs  tests_conditional.rs  tests_core.rs  tie_break.rs
rust/crates/ennbo/src/strategy/: mod.rs  tests_init.rs  tests_morbo_acq.rs  tests_selection.rs
rust/crates/ennbo/src/traits/: mod.rs
rust/crates/ennbo/src/trials/: metal.rs  opencl.rs  trials.cl  trials.metal
rust/crates/ennbo/src/weights/: metal_weights.rs  opencl_weights.rs  weights.cl  weights.metal
rust/crates/ennbo/tests/: add_complexity.rs  batch_posterior_train_regression.rs  disk_hnsw_background_flush_unit.rs  disk_hnsw_flush_wait_unit.rs  disk_hnsw_integration.rs  disk_hnsw_pending_buffer.rs  disk_observation.rs  disk_persist_index.rs  disk_streaming_helper.rs  enn_backend.rs  flush_hnsw_helpers.rs  hnsw.rs  kiss_disk_hnsw.rs  kiss_gate_coverage.rs  kiss_knn_backends.rs  kiss_model_access.rs  kiss_obs_access.rs  kiss_repo_strings.rs  neighbor_dist.rs  optimizer_disk_flush.rs  test_incumbent_tracker.rs  train_rows_at.rs  trial_search.rs  turbo_disk_backend.rs  weak_mathy_golden.rs
scripts/: bench_d_scaling.py  bench_raasp_time.py  benchmark_dt_sel.py  build_wheels.sh  compare_ennbo_versions.py  compare_ennbo_versions_common.py  generate_optimizer_quality_baseline.py  generate_python_optimizer_fixtures.py  optimizer_quality_common.py  profile_turbo_enn.py  test_sccache.sh
src/enn/: __init__.py  _lazy.py  _rust.py  core.py  enn_normal.py  enn_params.py  enn_util.py  fit.py  gumbel_trust_region.py  proposal.py  trust_region_state.py  turbo.py  turbo_config.py  turbo_gp.py  turbo_mode.py  turbo_optimizer.py  turbo_trust_region.py  turbo_utils.py
tests/: conftest.py  enn_helpers.py  morbo_objectives.py  test_ackley_core.py  test_appendable_array.py  test_base_turbo_impl.py  test_benchmark_dt_sel.py  test_benchmarks.py  test_candidate_gen_direct.py  test_candidate_gen_stats.py  test_compare_ennbo_versions.py  test_components.py  test_disk_hnsw_background_flush.py  test_enn_batch_posterior_train_regression.py  test_enn_class_draw_dry_guard.py  test_enn_conditional_draw.py  test_enn_conditional_posterior.py  test_enn_core.py  test_enn_fit.py  test_enn_fit_incremental.py  test_enn_index.py  test_enn_index_add.py  test_enn_index_driver.py  test_enn_internals.py  test_enn_invariance.py  test_enn_neighbors.py  test_enn_perf.py  test_enn_sample.py  test_enn_se_decomposition.py  test_enn_util.py  test_fallback_registry.py  test_hypervolume.py  test_impl_helpers.py  test_incumbent_selector.py  test_incumbent_tracker.py  test_kiss_coverage.py  test_kiss_fullrepo_symbol_registry.py  test_morbo_separable_unimodal.py  test_morbo_tr_direct.py  test_morbo_turbo_one.py  (+36 more)
tests/fixtures/: golden_optimizer_enn_seed42.json  optimizer_quality_baseline.json  optimizer_speed_baseline.json  posterior_speed_baseline.json
tests/parity/: __init__.py  fixture_replay.py  optimizer_fixture_capture.py  optimizer_fixture_catalog.py  optimizer_parity_helpers.py  parity_checks_optimizer.py  parity_checks_posterior.py  parity_checks_sobol.py  parity_convergence.py  parity_harness.py  parity_quality_gate.py  parity_speed_gate.py  parity_types.py  test_enn_model_parity.py  test_enn_surrogate_parity.py  test_raasp_parity.py  (+20 more)
(+151 files in other folders)
