[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ennbo"
version = "0.0.1"
description = "Epistemic Nearest Neighbors"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "YUBO Lab", email = "david.sweet@yu.edu" },
]
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.0.0",
    "gpytorch>=1.0.0",
    "faiss>=1.7.0",
    "scipy>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/yubo-research/enn"
Source = "https://github.com/yubo-research/enn"

[tool.hatch.build.targets.wheel]
packages = ["src/enn"]
