[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "ennbo"
version = "0.3.5"
description = "Epistemic Nearest Neighbors"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "YUBO Lab", email = "david.sweet@yu.edu" },
]
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/yubo-research/enn"
Source = "https://github.com/yubo-research/enn"

[project.optional-dependencies]
with-deps = [
    "numpy>=1.26.4,<2.0.0",
    "torch>=2.5.1",
    "gpytorch>=1.13",
    "faiss-cpu>=1.9.0",
    "scipy>=1.15.3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "nbmake>=1.5",
    "nds>=0.4.3",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

# Maturin builds wheels + sdist; do not publish Hatchling-only `py3-none-any` wheels (they lack `enn.enn_rust`).
# So `maturin build` / `maturin develop` from repo root find the PyO3 crate (no Cargo.toml at repo root).
# `module-name` places the extension as `enn.enn_rust` next to `src/enn/*.py` (see Maturin mixed-project docs).
[tool.maturin]
manifest-path = "rust/crates/enn-py/Cargo.toml"
python-source = "src"
module-name = "enn.enn_rust"
profile = "release"
auditwheel = "skip"
# Crate default features omit `modal` so bare `maturin build` links dynamic `libfaiss_c` on
# macOS (Homebrew/conda). On Linux without a linkable Faiss, use `maturin build --features modal`
# (static Faiss/OpenMP); the repo Makefile passes that automatically on Linux.
# `.cargo/` is outside the Rust workspace; include it for any workspace-level Cargo config.
include = [
    { path = ".cargo/**/*", format = "sdist" },
    { path = "rust/.cargo/**/*", format = "sdist" },
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]

[tool.ruff]
# General ruff settings
line-length = 88
fix = true
unsafe-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
