[workspace]
members = [
    "crates/enn-core",
    "crates/ennbo-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["YUBO Lab <david.sweet@yu.edu>"]
repository = "https://github.com/yubo-research/enn"

[workspace.dependencies]
ndarray = "0.16"
ndarray-linalg = "0.16"
numpy = "0.22"
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
