[package]
name = "bpann"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["nearest-neighbor", "ann", "disk-index"]
categories = ["science"]
description = "B+ANN disk-based approximate nearest-neighbor index"

[dependencies]
memmap2 = "0.9"
ndarray = { workspace = true }
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
tempfile = "3"
