[package]
name = "ennbo-py"
version.workspace = true
edition.workspace = true
build = "src/enn_py_build.rs"
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for ENN core algorithms"
readme = "../../../README.md"

[lib]
name = "enn_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
ennbo = { path = "../ennbo", version = "0.2" }
ndarray = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true }
