[package]
name = "ennbo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Epistemic Nearest Neighbor Bayesian Optimization"
readme = "README.md"

[dependencies]
faiss = { version = "0.13.0", features = ["static"] }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
rand = "0.8"
sobol = "1.0.2"
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
numpy = "0.22"
rand_chacha = "0.3"
