[package]
name = "ennbo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Epistemic Nearest Neighbor Bayesian Optimization"
readme = "README.md"
build = "src/ennbo_build.rs"

[dependencies]
bpann = { path = "../bpann" }
faiss = { version = "0.13.0" }
metal = { version = "0.33.0", optional = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
opencl3 = { version = "0.12.3", optional = true }
rand = "0.8"
rayon = "1.10"
sobol = "1.0.2"
thiserror = { workspace = true }
memmap2 = "0.9"

[features]
default = []
metal = ["dep:metal"]
opencl = ["dep:opencl3"]

# Modal/Linux images lack a linkable `libfaiss_c`; macOS dev builds use dynamic faiss (static needs OpenMP in cmake).
[target.'cfg(target_os = "linux")'.dependencies]
faiss = { version = "0.13.0", features = ["static"] }

[dev-dependencies]
approx = "0.5"
numpy = "0.22"
rand_chacha = "0.3"
tempfile = "3"
